# VulkanGameEngine

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  envWindowsExample.cmake
Shaders/: compile.bat
Shaders/POINTS/: points.vert  shader.vert
Shaders/SOLID/: shader.frag  shader.vert
Shaders/WIREFRAME/: shader.vert
VulkanGameEngine/: AppBuffer.cpp  AppBuffer.h  AppPipeline.cpp  AppPipeline.h  AppRenderer.cpp  AppRenderer.h  AppWindow.cpp  AppWindow.h  Camera.cpp  Camera.h  EngineDevice.cpp  EngineDevice.h  EngineSwapChain.cpp  EngineSwapChain.h  FrameInfo.h  GameObject.cpp  GameObject.h  InitialRenderSystem.cpp  InitialRenderSystem.h  KeyboardController.cpp  KeyboardController.h  Model.cpp  Model.h  VulkanApp.cpp  VulkanApp.h  app_utils.h  points.frag  shader.vert  wireframe.frag
VulkanGameEngine/Models/: client_http.c  server_http.c
VulkanGameEngine/Shaders/: shader.frag  shader.vert
VulkanGameEngine/Shaders/POINTS/: points.vert
VulkanGameEngine/Shaders/SOLID/: shader.frag  shader.vert
VulkanGameEngine/Shaders/WIREFRAME/: wireframe.vert
VulkanGameEngine/src/Headers/: AppDescriptor.h
VulkanGameEngine/src/Implementation/: AppDescriptor.cpp  Camera.cpp
src/: main.cpp
src/Headers/: AppPipeline.h  AppWindow.h  EngineDevice.h  KeyboardController.h  Model.h  PointLightSystem.h  VulkanApp.h
src/Implementation/: AppPipeline.cpp  AppRenderer.cpp  EngineDevice.cpp  EngineSwapChain.cpp  InitialRenderSystem.cpp  KeyboardController.cpp  Model.cpp  PointLightSystem.cpp  VulkanApp.cpp
